[gd_scene load_steps=6 format=2]

[ext_resource path="res://vehicles/chopper.tscn" type="PackedScene" id=1]
[ext_resource path="res://vehicles/meshes/vehicles_chopper_attack.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://vehicles/chopper_attack.gd" type="Script" id=3]
[ext_resource path="res://sounds/fire.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/launcher.wav" type="AudioStream" id=5]

[node name="AttackChopper" instance=ExtResource( 1 )]
script = ExtResource( 3 )
points = 100
level = 2
can_attack = true
attack_rate = 5.0

[node name="Mesh" parent="Origin" index="0"]
mesh = ExtResource( 2 )

[node name="HelixMesh" parent="Origin" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.2 )

[node name="FirePosition" type="Position3D" parent="Origin" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.179997, -0.978099 )

[node name="LRocketPosition" type="Position3D" parent="Origin" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, -0.01, -0.5 )

[node name="RRocketPosition" type="Position3D" parent="Origin" index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, -0.01, -0.5 )

[node name="ShootSound" type="AudioStreamPlayer3D" parent="." index="8"]
stream = ExtResource( 4 )
unit_db = -10.0
unit_size = 25.0
bus = "SFX"
attenuation_filter_cutoff_hz = 20500.0

[node name="LauncherSound" type="AudioStreamPlayer3D" parent="." index="9"]
stream = ExtResource( 5 )
unit_db = -5.0
unit_size = 25.0
bus = "SFX"
attenuation_filter_cutoff_hz = 20500.0
